--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chartjs-plugin-annotation-drag2",
   "homepage": "https://www.chartjs.org/chartjs-plugin-annotation/index",
   "description": "Annotations for Chart.js",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "author": "Taylor Johnson",
   "license": "MIT",
   "main": "dist/chartjs-plugin-annotation.js",
@@ -70,5 +70,8 @@
   },
   "peerDependencies": {
     "chart.js": "^3.7.0"
+  },
+  "dependencies": {
+    "chartjs-plugin-annotation-drag2": "^1.1.6"
   }
 }
